examples/datalog/17_rule_commands/15_rule_remove_nonexistent.dl
% Test: Rule Remove Nonexistent Rule
% Category: 17_rule_commands
% Description: Tests error when removing from a rule that doesn't exist
.kg create test_rule_remove_nex
.kg use test_rule_remove_nex
% No rules defined
.rule list
% Error: rule doesn't exist
.rule remove nonexistent 1
